syntax = "proto3";

import "www.velocidex.com/golang/velociraptor/proto/semantic.proto";

package proto;

message Artifacts {
    repeated string names = 1 [(sem_type) = {
            description: "The artifacts to launch.",
        }];
}


message ArtifactCollectorArgs {
    Artifacts artifacts = 1 [(sem_type) = {
            description: "The artifacts to launch.",
            friendly_name: "Artifacts To Launch",
        }];
}